# exercise

./: CMakeLists.txt  CMakeLists.txt.user.4ef6077  addr_trans.c  addr_trans.h  align.c  align.h  binary_tree.c  binary_tree.h  byte_order.c  byte_order.h  combination.c  combination.h  create_tempfile.c  create_tempfile.h  dualview.c  dualview.h  echo_cli.c  echo_cli.h  echo_run.c  echo_run.h  echo_srv.c  echo_srv.h  echo_sum.h  fields.c  fields.h  film2.c  film2.h  film3.c  film3.h  fork_twice.c  fork_twice.h  https_client.c  https_client.h  interpreter.c  interpreter.h  ioredirect.c  ioredirect.h  list.c  list.h  main.c  (+61 more)
